vcf9/k8/demo.type.lb/nginx.type.lb.demo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-lb-demo
  labels:
    app: nginx-lb
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-lb
  template:
    metadata:
      labels:
        app: nginx-lb
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-lb-service
spec:
  # This tells the cluster to request an IP from your 10.10.10.0/24 range
  type: LoadBalancer
  selector:
    app: nginx-lb
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
